--- a/index.html
+++ b/index.html
@@ -1,124 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <a class="navbar-brand" href="#">Felpe</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Modelli</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Prezzi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Carrello</a>
+                    </li>
+
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+            </div>
         </div>
-      </nav>
-    <div class="container-fluid p-5 bg-success-subtle">
-        <h1 class="display-1">Corso bootstrap</h1>        
-    </div>
-    <div class="container bg-primary-subtle mt-5">
-        Questo è un container
-    </div>
-
-    <div class="container-lg bg-success-subtle mt-5">
-        Questo è un container lg
-    </div>
-
-    <div class="container-fluid bg-danger-subtle mt-5">
-        Questo è un container fluid
-    </div>
-
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-6 bg-warning-subtle border">Questo occupa 6 colonne</div>
-            <div class="col-4 bg-warning-subtle border">4 colonne</div>
-            <div class="col-2 bg-warning-subtle border">2 colonne</div>
+    </nav>
+    <header id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./images/banner1.jpg" class="d-block w-100" alt="Banner 1">
+            </div>
+            <div class="carousel-item">
+                <img src="./images/banner2.jpg" class="d-block w-100" alt="Banner 2">
+            </div>
+            <div class="carousel-item">
+                <img src="./images/banner3.jpg" class="d-block w-100" alt="Banner 3">
+            </div>
         </div>
-    </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </header>
 
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-6 bg-warning-subtle border">Questo occupa 6 colonne</div>
-            <div class="col-md-4 bg-warning-subtle border">4 colonne</div>
-            <div class="col-md-2 bg-warning-subtle border">2 colonne</div>
-        </div>
-    </div>
+    <section class="container-fluid text-center py-4">
+        <h1 class="display-2 m-5">Vedi le offerte del mese!</h1>
+        <h1 class="display-6 m-5">Valide fino al 30 novembre 2023</h1>
+    </section>
 
-    <div class="container mt-5">
-        <div class="row align-items-center">
-            <div class="col-md-6">
-                <div class="bg-warning-subtle border">
-                    Questo occupa 6 colonne
+    <section class="container-fluid bg-primary bg-opacity-10">
+        <div class="container py-5">
+            <div class="row  py-5">
+                <div class="col-xxl-4 col-lg-6 my-3">
+                    <article class="card" style="width: 400px;">
+                        <img src="./images/felpa1.jpg" class="card-img-top" alt="Felpa 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Modello felpa: 1</h5>
+                            <p class="card-text">Materiale ...</p>
+                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-xxl-4 col-lg-6 my-3">
+                    <article class="card" style="width: 400px;">
+                        <img src="./images/felpa2.jpg" class="card-img-top" alt="Felpa 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Modello felpa: 2</h5>
+                            <p class="card-text">Materiale ...</p>
+                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-xxl-4 col-lg-6 my-3">
+                    <article class="card" style="width: 400px;">
+                        <img src="./images/felpa3.jpg" class="card-img-top" alt="Felpa 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Modello felpa: 3</h5>
+                            <p class="card-text">Materiale ...</p>
+                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-xxl-4 col-lg-6 my-3">
+                    <article class="card" style="width: 400px;">
+                        <img src="./images/felpa4.jpg" class="card-img-top" alt="Felpa 4">
+                        <div class="card-body">
+                            <h5 class="card-title">Modello felpa: 4</h5>
+                            <p class="card-text">Materiale ...</p>
+                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-xxl-4 col-lg-6 my-3">
+                    <article class="card" style="width: 400px;">
+                        <img src="./images/felpa5.jpg" class="card-img-top" alt="Felpa 5">
+                        <div class="card-body">
+                            <h5 class="card-title">Modello felpa: 5</h5>
+                            <p class="card-text">Materiale ...</p>
+                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-xxl-4 col-lg-6 my-3">
+                    <article class="card" style="width: 400px;">
+                        <img src="./images/felpa6.jpg" class="card-img-top" alt="Felpa 6">
+                        <div class="card-body">
+                            <h5 class="card-title">Modello felpa: </h5>
+                            <p class="card-text">Materiale ...</p>
+                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                        </div>
+                    </article>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="bg-warning-subtle border">
-                    Questo occupa 4 colonne
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="bg-warning-subtle border">
-                    Questo occupa 2 colonne
-                </div>
-            </div>
-            
         </div>
-    </div>
+    </section>
+    <footer class="container-fluid bg-secondary text-white py-5">
+        <h1 class="display-1 py-5">Questo è il footer</h1>
+    </footer>
 
-    <div class="container-xxl">
-        <div class="row">
-            <div class="col-sm-6 col-md-4 col-lg-2">
-                <div class="border bg-primary-subtle my-2">1</div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-2">
-                <div class="border bg-primary-subtle my-2">2</div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-2">
-                <div class="border bg-primary-subtle my-2">3</div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-2">
-                <div class="border bg-primary-subtle my-2">4</div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-2">
-                <div class="border bg-primary-subtle my-2">5</div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-2">
-                <div class="border bg-primary-subtle my-2">6</div>
-            </div>
-        </div>
-    </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
