--- a/index.html
+++ b/index.html
@@ -1,143 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Felpe</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Modelli</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Prezzi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Carrello</a>
-                    </li>
+    <div id="messaggio"></div>
+    <div>
+        Nome: <input type="text" id="inputNome"><button onclick="componiSaluto()">Saluta</button>
+    </div>
+    <div id="saluto"></div>
 
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <header id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./images/banner1.jpg" class="d-block w-100" alt="Banner 1">
-            </div>
-            <div class="carousel-item">
-                <img src="./images/banner2.jpg" class="d-block w-100" alt="Banner 2">
-            </div>
-            <div class="carousel-item">
-                <img src="./images/banner3.jpg" class="d-block w-100" alt="Banner 3">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </header>
-
-    <section class="container-fluid text-center py-4">
-        <h1 class="display-2 m-5">Vedi le offerte del mese!</h1>
-        <h1 class="display-6 m-5">Valide fino al 30 novembre 2023</h1>
-    </section>
-
-    <section class="container-fluid bg-primary bg-opacity-10">
-        <div class="container py-5">
-            <div class="row  py-5">
-                <div class="col-xxl-4 col-lg-6 my-3">
-                    <article class="card" style="width: 400px;">
-                        <img src="./images/felpa1.jpg" class="card-img-top" alt="Felpa 1">
-                        <div class="card-body">
-                            <h5 class="card-title">Modello felpa: 1</h5>
-                            <p class="card-text">Materiale ...</p>
-                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="col-xxl-4 col-lg-6 my-3">
-                    <article class="card" style="width: 400px;">
-                        <img src="./images/felpa2.jpg" class="card-img-top" alt="Felpa 2">
-                        <div class="card-body">
-                            <h5 class="card-title">Modello felpa: 2</h5>
-                            <p class="card-text">Materiale ...</p>
-                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="col-xxl-4 col-lg-6 my-3">
-                    <article class="card" style="width: 400px;">
-                        <img src="./images/felpa3.jpg" class="card-img-top" alt="Felpa 3">
-                        <div class="card-body">
-                            <h5 class="card-title">Modello felpa: 3</h5>
-                            <p class="card-text">Materiale ...</p>
-                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="col-xxl-4 col-lg-6 my-3">
-                    <article class="card" style="width: 400px;">
-                        <img src="./images/felpa4.jpg" class="card-img-top" alt="Felpa 4">
-                        <div class="card-body">
-                            <h5 class="card-title">Modello felpa: 4</h5>
-                            <p class="card-text">Materiale ...</p>
-                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="col-xxl-4 col-lg-6 my-3">
-                    <article class="card" style="width: 400px;">
-                        <img src="./images/felpa5.jpg" class="card-img-top" alt="Felpa 5">
-                        <div class="card-body">
-                            <h5 class="card-title">Modello felpa: 5</h5>
-                            <p class="card-text">Materiale ...</p>
-                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
-                        </div>
-                    </article>
-                </div>
-                <div class="col-xxl-4 col-lg-6 my-3">
-                    <article class="card" style="width: 400px;">
-                        <img src="./images/felpa6.jpg" class="card-img-top" alt="Felpa 6">
-                        <div class="card-body">
-                            <h5 class="card-title">Modello felpa: </h5>
-                            <p class="card-text">Materiale ...</p>
-                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer class="container-fluid bg-secondary text-white py-5">
-        <h1 class="display-1 py-5">Questo è il footer</h1>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+    <div>
+        <img src="./images/spenta.png" id="imgLampadina" onclick="accendiLampadina()">
+    </div>
+    
+    <script src="./script.js"></script>
 </body>
-
 </html>
