--- a/spotify/spotify.html
+++ b/spotify/spotify.html
@@ -12,8 +12,8 @@
     </div>
     <div class="container mt-5" id="search">
         <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Artist name" aria-label="Artist name" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+            <input type="text" id="input-name" class="form-control" placeholder="Artist name" aria-label="Artist name" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="searchArtistClick()">Search</button>
           </div>
     </div>
     <script src="./spotify.js"></script>
