--- a/spotify/spotify.html
+++ b/spotify/spotify.html
@@ -16,6 +16,8 @@
             <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="searchArtistClick()">Search</button>
           </div>
     </div>
+    <div class="container" id="results">        
+    </div>
     <script src="./spotify.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
